--- a/.github/workflows/flame_behaviors.yaml
+++ b/.github/workflows/flame_behaviors.yaml
@@ -19,6 +19,10 @@ on:
 jobs:
   build:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
+    with:
+      flutter_channel: stable
+      flutter_version: 2.10.0
+
 
   pana:
     runs-on: ubuntu-latest
