--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: flame_behaviors
-description: Behavioral composition pattern for Flame.
-version: 1.0.0+1
+description: An implementation of the behavioral composition pattern for Flame built by Very Good Ventures.
+version: 0.0.1-dev.1
+homepage: https://github.com/VeryGoodOpenSource/flame_behaviors
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -19,6 +20,6 @@ dev_dependencies:
 
 dependency_overrides:
   flame:
-    git: 
+    git:
       url: https://github.com/flame-engine/flame
       path: packages/flame
