--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # Every request must be reviewed and accepted by:
 
-- @wolfenrain @renancaraujo @felangel
+- @wolfenrain @renancaraujo @erickzanardo @felangel
