--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flame_behaviors
 description: Flame Behaviors applies separation of concerns to game logic in the form of Entities and Behaviors, built by Very Good Ventures.
-version: 0.0.1-dev.1
+version: 0.1.0
 homepage: https://github.com/VeryGoodOpenSource/flame_behaviors
 
 environment:
