ci: use semantic-pull-request workflow

--- a/.github/workflows/flame_behaviors.yaml
+++ b/.github/workflows/flame_behaviors.yaml
@@ -17,6 +17,9 @@ on:
       - "pubspec.yaml"
 
 jobs:
+  semantic-pull-request:
+    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/semantic_pull_request.yml@v1
+
   build:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
