--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,13 @@ environment:
   sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
-  flame: ^1.2.0
+  flame: ">=1.2.0 <2.0.0"
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  flame_test: ^1.5.0
+  flame_test: ^1.7.0
   flutter_test:
     sdk: flutter
   mocktail: ^0.3.0
-  very_good_analysis: ^3.0.0
+  very_good_analysis: ^3.0.1
