--- a/packages/flame_behaviors/pubspec.yaml
+++ b/packages/flame_behaviors/pubspec.yaml
@@ -2,6 +2,9 @@ name: flame_behaviors
 description: Flame Behaviors applies separation of concerns to game logic in the form of Entities and Behaviors, built by Very Good Ventures.
 version: 0.1.1
 homepage: https://github.com/VeryGoodOpenSource/flame_behaviors
+repository: https://github.com/VeryGoodOpenSource/flame_behaviors
+issue_tracker: https://github.com/VeryGoodOpenSource/flame_behaviors/issues
+documentation: https://github.com/VeryGoodOpenSource/flame_behaviors/tree/main/docs
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
