--- a/packages/flame_behaviors/pubspec.yaml
+++ b/packages/flame_behaviors/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.1.1
 homepage: https://github.com/VeryGoodOpenSource/flame_behaviors
 repository: https://github.com/VeryGoodOpenSource/flame_behaviors
 issue_tracker: https://github.com/VeryGoodOpenSource/flame_behaviors/issues
-# documentation: https://github.com/VeryGoodOpenSource/flame_behaviors/tree/main/docs
+documentation: https://github.com/VeryGoodOpenSource/flame_behaviors/tree/main/docs
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
