ci: add publish workflow

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -45,4 +45,4 @@ jobs:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/dart_pub_publish.yml@v1
     with:
       working-directory: packages/${{ needs.to_publish.outputs.package }}
-      pub_credentials: ${{ secrets.PUB_CREDENTIALS }}
+      pub_credentials: secrets.PUB_CREDENTIALS
