--- a/packages/flame_behaviors/pubspec.yaml
+++ b/packages/flame_behaviors/pubspec.yaml
@@ -7,16 +7,17 @@ issue_tracker: https://github.com/VeryGoodOpenSource/flame_behaviors/issues
 documentation: https://github.com/VeryGoodOpenSource/flame_behaviors/tree/main/docs
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
+  flutter: 3.13.2
 
 dependencies:
-  flame: ">=1.7.0 <2.0.0"
+  flame: ">=1.10.0 <2.0.0"
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  flame_test: ^1.9.1
+  flame_test: ^1.12.1
   flutter_test:
     sdk: flutter
-  mocktail: ^0.3.0
-  very_good_analysis: ^4.0.0+1
+  mocktail: ^1.0.0
+  very_good_analysis: ^5.1.0
