chore(flame_steering_behaviors): bring `flame_steering_behaviors` into the repository

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -12,3 +12,11 @@ updates:
     directory: "/packages/flame_behaviors/example"
     schedule:
       interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/packages/flame_steering_behaviors"
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "pub"
+    directory: "/packages/flame_steering_behaviors/example"
+    schedule:
+      interval: "daily"
