--- a/packages/flame_steering_behaviors/pubspec.yaml
+++ b/packages/flame_steering_behaviors/pubspec.yaml
@@ -1,9 +1,13 @@
 name: flame_steering_behaviors
 description: Flame Steering Behaviors brings steering algorithms to the behavior pattern, built by Very Good Ventures.
 version: 0.1.0
+homepage: https://github.com/VeryGoodOpenSource/flame_behaviors
+repository: https://github.com/VeryGoodOpenSource/flame_behaviors
+issue_tracker: https://github.com/VeryGoodOpenSource/flame_behaviors/issues
+documentation: https://github.com/VeryGoodOpenSource/flame_behaviors/tree/main/docs
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies: 
   flame: ">=1.10.0 <2.0.0"
