attempting workflow updates

--- a/.github/workflows/flame_behaviors.yaml
+++ b/.github/workflows/flame_behaviors.yaml
@@ -18,11 +18,18 @@ on:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        flutter-version:
+          # The version of Flutter to use should use the minimum Dart SDK version supported by the package,
+          # refer to https://docs.flutter.dev/development/tools/sdk/releases.
+          - "3.22.0"
+          - "3.x"
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       working_directory: packages/flame_behaviors
       flutter_channel: stable
-      flutter_version: 3.13.5
+      flutter_version: ${{ matrix.flutter-version }}
 
   pana:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/pana.yml@v1
