--- a/packages/flame_behaviors/example/pubspec.yaml
+++ b/packages/flame_behaviors/example/pubspec.yaml
@@ -4,14 +4,14 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ^3.5.0
 
 dependencies:
-  flame: ^1.10.0
+  flame: ^1.18.0
   flame_behaviors:
     path: ../
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  very_good_analysis: ">=5.1.0 <7.0.0"
+  very_good_analysis: ^6.0.0
