--- a/packages/flame_steering_behaviors/pubspec.yaml
+++ b/packages/flame_steering_behaviors/pubspec.yaml
@@ -7,17 +7,17 @@ issue_tracker: https://github.com/VeryGoodOpenSource/flame_behaviors/issues
 documentation: https://github.com/VeryGoodOpenSource/flame_behaviors/tree/main/docs
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ^3.5.0
 
-dependencies: 
-  flame: ">=1.10.0 <2.0.0"
-  flame_behaviors: ">=1.0.0 <2.0.0"
+dependencies:
+  flame: ^1.18.0
+  flame_behaviors: ^1.1.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  flame_test: ^1.13.2
+  flame_test: ^1.16.2
   flutter_test:
     sdk: flutter
-  mocktail: ^1.0.2
-  very_good_analysis: ">=5.1.0 <7.0.0"
+  mocktail: ^1.0.4
+  very_good_analysis: ^6.0.0
