--- a/.github/workflows/flame_steering_behaviors_pub_publish.yaml
+++ b/.github/workflows/flame_steering_behaviors_pub_publish.yaml
@@ -18,7 +18,15 @@ jobs:
         uses: actions/checkout@v4
       - name: 🐦 Setup Flutter
         uses: subosito/flutter-action@v2
+      - name: 🪪 Get Id Token
+        uses: actions/github-script@v6
+        with:
+          script: |
+            let pub_token = await core.getIDToken('https://pub.dev')
+            core.exportVariable('PUB_TOKEN', pub_token)
+      - name: 📢 Authenticate
+        run: flutter pub pub token add https://pub.dev --env-var PUB_TOKEN
       - name: 📦 Install Dependencies
         run: flutter pub get
       - name: 📢 Publish
-        run: dart pub publish --force
+        run: flutter pub publish -f
