--- a/packages/flame_behaviors/pubspec.yaml
+++ b/packages/flame_behaviors/pubspec.yaml
@@ -7,10 +7,11 @@ issue_tracker: https://github.com/VeryGoodOpenSource/flame_behaviors/issues
 documentation: https://github.com/VeryGoodOpenSource/flame_behaviors/tree/main/docs
 
 environment:
-  sdk: ^3.5.0
+  sdk: ">=3.6.0 <4.0.0"
+  flutter: ">=3.27.1"
 
 dependencies:
-  flame: ^1.19.0
+  flame: ^1.30.1
   flutter:
     sdk: flutter
 
