--- a/packages/flame_behaviors/pubspec.yaml
+++ b/packages/flame_behaviors/pubspec.yaml
@@ -7,10 +7,11 @@ issue_tracker: https://github.com/VeryGoodOpenSource/flame_behaviors/issues
 documentation: https://github.com/VeryGoodOpenSource/flame_behaviors/tree/main/docs
 
 environment:
-  sdk: ^3.5.0
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.32.7"
 
 dependencies:
-  flame: ^1.19.0
+  flame: ^1.30.1
   flutter:
     sdk: flutter
 
@@ -19,4 +20,4 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.4
-  very_good_analysis: ^7.0.0
+  very_good_analysis: ^9.0.0
